// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      <button
        className="ms-Button ms-Button--commandBar array-item-add root-41"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "32px",
          }
        }
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-49 ms-Button-icon icon-44"
            data-icon-name="Add"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-45"
              id="id__1"
            >
              Add item
            </span>
          </span>
        </span>
      </button>
    </span>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__4"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-69"
    />
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required={false}
        className="ms-Dropdown dropdown-81"
        data-is-focusable={true}
        id="Dropdown39"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          aria-atomic={true}
          aria-invalid={false}
          aria-live="polite"
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-82"
          id="Dropdown39-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-83"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-97"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__40"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg9"
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm12  field field-string"
              style={
                Object {
                  "marginBottom": 15,
                }
              }
            >
              <div
                className="ms-TextField is-required root-55"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-56"
                  >
                    <input
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-57"
                      disabled={false}
                      id="root_0"
                      name="nodejs"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      readOnly={false}
                      required={true}
                      type="string"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm6 ms-md4 ms-lg3"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled root-63"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-67 ms-Button-icon icon-64"
                data-icon-name="Up"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled root-63"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-67 ms-Button-icon icon-64"
                data-icon-name="Down"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-68"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-49 ms-Button-icon icon-51"
                data-icon-name="Delete"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg9"
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm12  field field-number"
              style={
                Object {
                  "marginBottom": 15,
                }
              }
            >
              <label
                className="ms-Label root-69"
                htmlFor="root_1"
              >
                undefined*
              </label>
              <div
                className="css-70"
              >
                
                <div
                  className="css-74"
                  id="root_1"
                  onChange={[Function]}
                >
                  <input
                    aria-disabled={false}
                    aria-labelledby=""
                    aria-valuemax={Infinity}
                    aria-valuemin={-Infinity}
                    aria-valuenow={-Infinity}
                    autoComplete="off"
                    className="ms-spinButton-input css-75"
                    data-lpignore={true}
                    disabled={false}
                    id="input20"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    role="spinbutton"
                    type="text"
                    value="-Infinity"
                  />
                  <span
                    className="css-76"
                  >
                    <button
                      aria-label="Increase value by 1"
                      className="ms-Button ms-Button--icon ms-UpButton root-77"
                      data-is-focusable={false}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      tabIndex={-1}
                      type="button"
                    >
                      <span
                        className="ms-Button-flexContainer flexContainer-42"
                        data-automationid="splitbuttonprimary"
                      >
                        <i
                          aria-hidden={true}
                          className="ms-Icon root-37 css-79 ms-Button-icon icon-78"
                          data-icon-name="ChevronUpSmall"
                          role="presentation"
                          style={
                            Object {
                              "fontFamily": "\\"FabricMDL2Icons-2\\"",
                            }
                          }
                        >
                          
                        </i>
                      </span>
                    </button>
                    <button
                      aria-label="Decrease value by 1"
                      className="ms-Button ms-Button--icon ms-DownButton root-77"
                      data-is-focusable={false}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      tabIndex={-1}
                      type="button"
                    >
                      <span
                        className="ms-Button-flexContainer flexContainer-42"
                        data-automationid="splitbuttonprimary"
                      >
                        <i
                          aria-hidden={true}
                          className="ms-Icon root-37 css-80 ms-Button-icon icon-78"
                          data-icon-name="ChevronDownSmall"
                          role="presentation"
                          style={
                            Object {
                              "fontFamily": "\\"FabricMDL2Icons-3\\"",
                            }
                          }
                        >
                          
                        </i>
                      </span>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm6 ms-md4 ms-lg3"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled root-63"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-67 ms-Button-icon icon-64"
                data-icon-name="Up"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled root-63"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-67 ms-Button-icon icon-64"
                data-icon-name="Down"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-68"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-49 ms-Button-icon icon-51"
                data-icon-name="Delete"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__36"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
